初始化代码

--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!--项目信息-->
     <modelVersion>4.0.0</modelVersion>
     <groupId>tsai.spring.boot</groupId>
     <artifactId>spring-boot-catdogalliance</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-catdogalliance</name>
-    <description>spring-boot-catdogalliance</description>
+    <version>1.1.0</version>
+
+    <!--版本号-->
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
         <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
+        <tsai.version>2.1.0-SNAPSHOT</tsai.version>
     </properties>
+
+    <!--组件依赖-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!--日志-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
+        <!--服务监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--自己封装的开源组件-->
+        <dependency>
+            <groupId>com.tsaiframework.boot</groupId>
+            <artifactId>tsai-spring-boot-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tsaiframework.boot</groupId>
+            <artifactId>tsai-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
+
+    <!--依赖管理-->
     <dependencyManagement>
         <dependencies>
+            <!--spring-boot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -40,37 +62,38 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--tsai-spring-starter-->
+            <dependency>
+                <groupId>com.tsaiframework.boot</groupId>
+                <artifactId>tsai-spring-boot-core</artifactId>
+                <version>${tsai.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tsaiframework.boot</groupId>
+                <artifactId>tsai-spring-boot-starter</artifactId>
+                <version>${tsai.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <!--构建配置-->
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven.compiler.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <verbose>false</verbose>
+                    <showWarnings>false</showWarnings>
+                    <fork>true</fork>
+                    <compilerVersion>1.5</compilerVersion>
+                    <meminitial>512m</meminitial>
+                    <maxmem>2048m</maxmem>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-                <configuration>
-                    <mainClass>tsai.spring.boot.SpringBootCatdogallianceApplication</mainClass>
-                    <skip>true</skip>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>repackage</id>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
